--- a/cart.html
+++ b/cart.html
@@ -51,24 +51,24 @@
                             <h2 class="header__title">menu</h2>
                             <ul class="header__menu-list">
                                 <li class="header__menu-item header__menu-sub-ite-item">
-                                    <a class="header__menu-linc" href="#">
+                                    <a class="header__menu-linc header__menu-sub-item-title" href="#">
                                         <h3 class="header__menu-sub-item-title">
                                             man
                                         </h3>
                                     </a>
                                     <ul class="header__menu-sub-item-list">
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Accessories</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Bags</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Denim</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">T-Shirts</li>
-                                        </a>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Accessories</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Bags</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Denim</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">T-Shirts</a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li class="header__menu-item header__menu-sub-item">
@@ -78,21 +78,21 @@
                                         </h3>
                                     </a>
                                     <ul>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Accessories</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Jackets & Coats</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Polos</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">T-Shirts</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Shirts</li>
-                                        </a>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Accessories</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Jackets & Coats</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Polos</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">T-Shirts</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Shirts</a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li class="header__menu-item header__menu-sub-item">
@@ -102,24 +102,24 @@
                                         </h3>
                                     </a>
                                     <ul>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Accessories</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Jackets & Coats</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Polos</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">T-Shirts</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Shirts</li>
-                                        </a>
-                                        <a class="header__menu-linc" href="#">
-                                            <li class="header__menu-sub-ite-item">Bags</li>
-                                        </a>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Accessories</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Jackets & Coats</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Polos</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#"></a>T-Shirts
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Shirts</a>
+                                        </li>
+                                        <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
+                                                href="#">Bags</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -140,7 +140,7 @@
             </div>
         </div>
     </header>
-    <section class="registration-page">
+    <section class="page-header">
         <div class="page-header__block">
             <div class="container">
                 <h2 class="page-header__title">Shopping cart</h2>
@@ -148,6 +148,7 @@
         </div>
     </section>
     <section class="shopping-cart container">
+        <h2 class="visually-hidden">Shopping-cart</h2>
         <div class="shopping-cart__img-container">
             <div class="shopping-cart__cart">
                 <img src="./img/cart-top.jpg" alt="cart">
@@ -208,7 +209,7 @@
         </div>
         <div class="shopping-cart__adress-container">
             <form class="shopping-cart__adress-box" action="#">
-                <div class="shopping-cart__adress-box-inpyt">
+                <fieldset class="shopping-cart__adress-box-inpyt">
                     <legend class="shopping-cart__adress-legend">Shipping adress</legend>
                     <label><input class="shopping-cart__adress-form" type="text" placeholder="Bangladesh"><span
                             class="visually-hidden">Bangladesh</span></label>
@@ -217,7 +218,7 @@
                     <label><input class="shopping-cart__adress-form" type="text" placeholder="Postcode / Zip"><span
                             class="visually-hidden">Postcode / Zip</span></label>
                     <button class="shopping-cart__form-button" type="submit">Get a Quote</button>
-                </div>
+                </fieldset>
                 <div class="shopping-cart__order">
                     <div class="shopping-cart__order-box">
                         <p class="shopping-cart__order-text-top">sub total<span
@@ -235,13 +236,16 @@
         </div>
     </section>
     <footer class="footer">
+        <h2 class="visually-hidden">Footer</h2>
         <section class="footer__subscription">
+            <h2 class="visually-hidden">Footer</h2>
             <img class="footer__background" src="./img/footer-background.jpg" alt="footer-background">
             <div class="footer__box container">
                 <ul class="footer__subscription-item">
                     <li class="footer__subscription-title">
                         <img class="footer__subscription-img" src="./img/feedback.svg" alt="feedback">
-                        <p class="footer__subscription-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+                        <p class="footer__subscription-text">“Vestibulum quis porttitor dui! Quisque viverra nunc
+                            mi, a
                             pulvinar purus condimentum“</p>
                     </li>
                     <li class="footer__subscription-title">
@@ -249,7 +253,8 @@
                         <p class="footer__subtitle-subtitle">for our newletter and promotion</p>
                         <form class="footer__form" action="#">
                             <label><input class="footer__form-email" type="email" placeholder="Enter Your Email"><span
-                                    class="visually-hidden">Enter Your Email</span></label>
+                                    class="visually-hidden">Enter Your
+                                    Email</span></label>
                             <button class="footer__button" type="submit">Subscribe</button>
                         </form>
                     </li>
@@ -257,6 +262,7 @@
             </div>
         </section>
         <section class="footer__copyright">
+            <h2 class="visually-hidden">Footer</h2>
             <div class="footer__copyright-container container">
                 <p class="footer__copyright-text">© 2021 Brand All Rights Reserved.</p>
                 <ul class="footer__copyright-item">
@@ -291,12 +297,12 @@
                         <a href="https://www.pinterest.ru/"><svg width="32" height="32" viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path class="footer__copyright-title-box" d="M31.9252 0H0.474609V32H31.9252V0Z" />
-                                <g clip-path="url(#clip0)">
+                                <g clip-path="url(#clip8)">
                                     <path class="footer__copyright-title-symbol"
                                         d="M16.7403 8.20312C13.5556 8.20312 10.4082 10.3406 10.4082 13.8C10.4082 16 11.6374 17.25 12.3823 17.25C12.6896 17.25 12.8666 16.3875 12.8666 16.1438C12.8666 15.8531 12.1309 15.2344 12.1309 14.025C12.1309 11.5125 14.0305 9.73125 16.4889 9.73125C18.6027 9.73125 20.1671 10.9406 20.1671 13.1625C20.1671 14.8219 19.506 17.9344 17.3642 17.9344C16.5913 17.9344 15.9302 17.3719 15.9302 16.5656C15.9302 15.3844 16.7496 14.2406 16.7496 13.0219C16.7496 10.9531 13.835 11.3281 13.835 13.8281C13.835 14.3531 13.9002 14.9344 14.133 15.4125C13.7046 17.2688 12.8293 20.0344 12.8293 21.9469C12.8293 22.5375 12.9131 23.1188 12.969 23.7094C13.0745 23.8281 13.0218 23.8156 13.1832 23.7563C14.7476 21.6 14.6917 21.1781 15.3994 18.3562C15.7812 19.0875 16.7683 19.4812 17.5505 19.4812C20.8469 19.4812 22.3275 16.2469 22.3275 13.3313C22.3275 10.2281 19.6643 8.20312 16.7403 8.20312Z" />
                                 </g>
                                 <defs>
-                                    <clipPath id="clip0">
+                                    <clipPath id="clip8">
                                         <rect width="11.9193" height="16" fill="white"
                                             transform="translate(10.4082 8)" />
                                     </clipPath>
@@ -307,12 +313,12 @@
                         <a href="https://twitter.com/">
                             <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                                 <path class="footer__copyright-title-box" d="M31.6635 0H0.212891V32H31.6635V0Z" />
-                                <g clip-path="url(#clip0)">
+                                <g clip-path="url(#clip7)">
                                     <path class="footer__copyright-title-symbol"
                                         d="M22.417 12.7405C22.427 12.8826 22.427 13.0248 22.427 13.1669C22.427 17.5019 19.1498 22.4969 13.1599 22.4969C11.3145 22.4969 9.60022 21.9588 8.1582 21.0248C8.4204 21.0552 8.67247 21.0654 8.94475 21.0654C10.4674 21.0654 11.8691 20.5476 12.9884 19.6644C11.5565 19.6339 10.3565 18.6898 9.94305 17.3903C10.1447 17.4207 10.3464 17.441 10.5582 17.441C10.8506 17.441 11.1431 17.4004 11.4153 17.3294C9.92291 17.0248 8.80355 15.705 8.80355 14.1111V14.0705C9.23715 14.3141 9.74139 14.4664 10.2758 14.4867C9.39849 13.8979 8.82373 12.8928 8.82373 11.7557C8.82373 11.1466 8.98504 10.5882 9.26741 10.1009C10.8708 12.0908 13.2809 13.3902 15.9833 13.5324C15.9329 13.2887 15.9027 13.035 15.9027 12.7811C15.9027 10.974 17.3548 9.50195 19.1598 9.50195C20.0976 9.50195 20.9446 9.89789 21.5396 10.5375C22.2757 10.3954 22.9816 10.1212 23.6068 9.74561C23.3648 10.507 22.8505 11.1466 22.1749 11.5527C22.8304 11.4817 23.4657 11.2989 24.0505 11.0451C23.6069 11.6948 23.0522 12.2735 22.417 12.7405Z" />
                                 </g>
                                 <defs>
-                                    <clipPath id="clip0">
+                                    <clipPath id="clip7">
                                         <rect width="15.8924" height="16" fill="white"
                                             transform="translate(8.1582 8)" />
                                     </clipPath>
